--- a/gail-application/pom.xml
+++ b/gail-application/pom.xml
@@ -17,4 +17,11 @@
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.aibaixun</groupId>
+            <artifactId>spring-boot-starter-swagger</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
